2005-04-14  Petr Ovtchenkov  <ptr@island...>

	* stlport/stl/_list.h, _slist.h: add this-> resolution to get_allocator
	[required in the member templates to resolve possible ambiguity]

2005-04-13  Francois Dumont  <dums@stlport...>

	* stlport/stl/_list.h, _slist.h: Add missing get_allocator() call when
	building temporary list or slist instances in insert methods.

2005-04-12  Petr Ovtchenkov  <ptr@island...>

	* stlport/errno.h: solution 2005-04-12 not useful. Simplified schema,
	semantically equivalent to Francois', but without extra function definition
	[see records 2005-03-31 and 2005-04-01]

2005-04-12  Petr Ovtchenkov  <ptr@island...>

	* stlport/errno.h: check if we undefine previously defined errno

2005-04-11  Petr Ovtchenkov  <ptr@island...>

	* stlport/errno.h: save original errno definition

2005-04-10  Petr Ovtchenkov  <ptr@island...>

	* STLport (repository): STLport 5.0 RC3

2005-04-08  Francois Dumont  <dums@stlport...>

	* test/unit/locale_test.cpp: Add __FreeBSD__ macro check for the wordaround
	announced as Free BSD specific by the comment next to it.
	
	* stlport/stl/_config.h: Add undef of _STLP_USE_DYNAMIC_LIB when in NO_IOSTREAMS
	mode, this macro was generating buggy code in this case for some commpilers
	(gcc mingwin).
	
2005-04-07  Francois Dumont  <dums@stlport...>

	* build/lib/nmake-vc-common.mak: Removed useless add of STLport/lib to 
	library paths when building STLport lib.
	
	* build/Makefiles/nmake/*: Removed useless specification of the MSVC default
	install	directory, all the job is done by the vcvcars32.bat script that sets
	the LIB env variable to the real MSVC install directory.
	
	* test/unit/unordered_test.cpp, locale_test.cpp: Removed gcc mingw warnings.
	
	* build/Makefiles/nmake/icl.mak, app/icl.mak, lib/icl.mak: Removed the
	whole program optimization option, looks like it is confusing icl.
	
	* stlport/stl/debug/*.h: Removed useless _Get_base non-const overload. 